# velox-framework

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
velox/: __init__.py
velox/auth/: __init__.py  backends.py  decorators.py  middleware.py  models.py
velox/cli/: __init__.py  __main__.py  main.py
velox/cli/commands/: __init__.py  createuser.py  makemigrations.py  migrate.py  migration.py  runserver.py  runserver_new.py  shell.py  startapp.py  startproject.py  user.py
velox/core/: __init__.py  application.py  config.py  container.py  events.py  exceptions.py  registry.py
velox/db/: __init__.py  connection.py  managers.py  migrations.py  models.py
velox/http/: __init__.py  controllers.py  middleware.py  responses.py  routing.py
velox_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
